# jalwa

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  SECURITY.md  bench-history.csv  benchmarks.md  bump-version.sh  deny.toml  tarpaulin-report.json
.github/workflows/: ci.yml  release.yml
benches/: dsp.rs  hardware.rs  library.rs  video.rs
benchmark-results/: history.json  history.md  latest.json  latest.md
crates/jalwa-ai/: Cargo.toml
crates/jalwa-ai/src/: daimon.rs  fingerprint.rs  lib.rs
crates/jalwa-core/: Cargo.toml
crates/jalwa-core/benches/: library_bench.rs
crates/jalwa-core/src/: db.rs  hardware.rs  lib.rs  playlist_io.rs  scanner.rs  watcher.rs
crates/jalwa-gui/: Cargo.toml
crates/jalwa-gui/src/: app.rs  art_cache.rs  lib.rs  theme.rs
crates/jalwa-gui/src/views/: devices.rs  equalizer.rs  library.rs  mod.rs  now_playing.rs  queue.rs  sidebar.rs  transport.rs  video.rs
crates/jalwa-playback/: Cargo.toml
crates/jalwa-playback/benches/: dsp_bench.rs
crates/jalwa-playback/src/: decode_thread.rs  dsp.rs  lib.rs  mpris.rs  video_decode_thread.rs
crates/jalwa-ui/: Cargo.toml
crates/jalwa-ui/src/: app.rs  lib.rs  tui.rs  widgets.rs
docs/: architecture.md  benchmarks.md  mcp-tools.md  roadmap.md
scripts/: bench-history.sh  run-benchmarks.sh  version-bump.sh
src/: main.rs  mcp.rs
tests/: integration.rs
