[workspace]
resolver = "2"
members = [
    "crates/jalwa-core",
    "crates/jalwa-playback",
    "crates/jalwa-ui",
    "crates/jalwa-gui",
    "crates/jalwa-ai",
]

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "time", "signal", "io-util", "io-std", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }

bytes = "1"
bytemuck = { version = "1", features = ["derive"] }

# Library
rusqlite = { version = "0.32", features = ["bundled"] }
lofty = "0.22"
walkdir = "2"

# TUI
ratatui = "0.29"
crossterm = "0.28"

# GUI
egui = "0.33"
eframe = { version = "0.33", default-features = false, features = ["default_fonts", "wgpu", "wayland"] }
image = { version = "0.25", features = ["jpeg", "png"] }

# File watching
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }

# D-Bus (MPRIS)
zbus = { version = "5", default-features = false, features = ["tokio"] }

# System
libc = "0.2"

# Tarang media framework
tarang = { version = "0.20.3", default-features = false }

# Audio engine
dhvani = { version = "0.20.4", default-features = false, features = ["dsp", "analysis", "simd"] }

# Media compositing (video surface, scene graph, HW-accelerated encoding)
aethersafta = { version = "0.21.3", default-features = false, features = ["pipewire", "hwaccel"] }

# Hardware accelerator detection
ai-hwaccel = { version = "0.21.3", default-features = false }

# Device abstraction (USB, optical, udev hotplug)
yukti = { version = "0.22.3", default-features = true }

[package]
name = "jalwa"
version = "2026.3.22"
edition = "2024"
description = "Jalwa — AI-native media player for AGNOS, built on the Tarang media framework"
license = "GPL-3.0"

[features]
default = ["tarang", "pipewire", "yukti"]
tarang = [
    "dep:tarang",
    "jalwa-core/tarang",
    "jalwa-playback/tarang",
    "jalwa-ai/tarang",
    "jalwa-ui/tarang",
]
pipewire = ["jalwa-playback/pipewire"]
video = ["jalwa-playback/video", "jalwa-gui/aethersafta"]
yukti = ["jalwa-core/yukti", "jalwa-gui/yukti"]

[dependencies]
jalwa-core = { path = "crates/jalwa-core" }
jalwa-playback = { path = "crates/jalwa-playback", default-features = false }
jalwa-ui = { path = "crates/jalwa-ui" }
jalwa-gui = { path = "crates/jalwa-gui" }
jalwa-ai = { path = "crates/jalwa-ai" }
tarang = { workspace = true, optional = true }
uuid = { workspace = true }
libc = { workspace = true }
clap = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }
egui = { workspace = true }
yukti = { workspace = true }

[[bin]]
name = "jalwa"
path = "src/main.rs"

[[bench]]
name = "library"
harness = false

[[bench]]
name = "dsp"
harness = false

[[bench]]
name = "video"
harness = false

[[bench]]
name = "hardware"
harness = false
required-features = ["yukti"]
