[package]
name = "jalwa-ai"
version = "2026.3.19"
edition = "2024"
description = "AI features for Jalwa — smart playlists, recommendations, transcription routing via hoosh"
license = "GPL-3.0"

[features]
default = []
tarang = ["dep:tarang", "jalwa-core/tarang"]

[dependencies]
jalwa-core = { path = "../jalwa-core", default-features = false }
tarang = { workspace = true, optional = true }
bytes = { workspace = true }
bytemuck = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
rayon = "1"
