[package]
name = "jalwa-playback"
version = "2026.3.18"
edition = "2024"
description = "Playback engine for Jalwa — tarang decode pipeline + PipeWire audio output"
license = "GPL-3.0"

[features]
default = ["pipewire"]
pipewire = ["tarang-audio/pipewire"]

[dependencies]
jalwa-core = { path = "../jalwa-core" }
tarang-core = { workspace = true }
tarang-demux = { workspace = true }
tarang-audio = { workspace = true }
tarang-video = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
zbus = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
