[package]
name = "jalwa-playback"
version = "2026.3.22"
edition = "2024"
description = "Playback engine for Jalwa — tarang decode pipeline + PipeWire audio output"
license = "GPL-3.0"

[features]
default = ["tarang", "pipewire"]
tarang = ["dep:tarang", "jalwa-core/tarang"]
pipewire = ["tarang", "tarang/pipewire"]
video = ["tarang", "tarang/dav1d", "tarang/openh264"]

[dependencies]
jalwa-core = { path = "../jalwa-core", default-features = false }
tarang = { workspace = true, optional = true }
dhvani = { workspace = true }
bytemuck = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
bytes = { workspace = true }
zbus = { workspace = true }
ai-hwaccel = { workspace = true }

[dev-dependencies]
uuid = { workspace = true }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dsp_bench"
harness = false
